--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_test
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# properties for security
+spring.security.user.name=admin
+spring.security.user.password=test@123
+
 
